--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">RidgeSurvey</string>
+    <string name="map">Map</string>
+    <string name="failed_to_load_map">Failed to load map</string>
 </resources>
