Added display of loaded sites

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">RidgeSurvey</string>
     <string name="map">Map</string>
     <string name="failed_to_load_map">Failed to load map</string>
+    <string name="failed_to_load_sites">Failed to load sites</string>
 </resources>
