--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="no_site_selected">No site selected</string>
     <string name="select_a_site">Select a site by tapping on it</string>
     <string name="saved">Saved</string>
+    <string name="upload">Upload</string>
 </resources>
