--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="select_a_site">Select a site by tapping on it</string>
     <string name="saved">Saved</string>
     <string name="upload">Upload</string>
+    <string name="message_loading_images">Loading images</string>
 </resources>
