--- a/doc/user-guide.tex
+++ b/doc/user-guide.tex
@@ -29,12 +29,16 @@ Scroll and zoom the map to find the site that you would like to navigate to. Tap
 
 Once you have tapped on a site to select it, you can make an observation at that site. Tap the data entry button in the action bar to start recording an observation.
 
-Check the box for each ant species that you find around the site. If you see any species that does not have a check box, describe it in the notes field.
+Check the box for each ant species that you find around the site. If you see a species that does not have a check box, describe it in the notes field.
 
 Tap the save button in the action bar to save the observation. The observation will be saved locally and then uploaded when the device has internet access.
 
+\subsection{Viewing previous observations}
+
+Tap the observation list button to view the list of observations. The list shows the most recent observation first.
+
 \paragraph{Correcting mistakes}
 
-If you submit an incorrect observation, go back and make another observation for the same site. Enter the correct information, and write in the notes that the previous observation was wrong. Someone will delete the incorrect observation.
+From the observation list, tap on an observation to view it. After making changes, tap the save button. The updated observation will be uploaded.
 
 \end{document}
