Compass toggle button (untested)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,6 @@
     <string name="upload">Upload</string>
     <string name="message_loading_images">Loading images</string>
     <string name="help_species_image">Press to view an image of the species</string>
+    <string name="view_observations">View observations</string>
+    <string name="compass">Compass</string>
 </resources>
