--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="help_species_image">Press to view an image of the species</string>
     <string name="view_observations">View observations</string>
     <string name="compass">Compass</string>
+    <string name="record_observation">Record observation</string>
 </resources>
