--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="title_5_elapsed">5:00 elapsed</string>
     <string name="content_5_elapsed">One-person search time has ended</string>
     <string name="no_previous_route">No previous route</string>
+    <string name="observed">Observed</string>
 </resources>
