--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="content_5_elapsed">One-person search time has ended</string>
     <string name="no_previous_route">No previous route</string>
     <string name="observed">Observed</string>
+    <string name="request_location_explanation">%s needs location permissions to show your location on the map.</string>
 </resources>
